<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raneez.truewallet.addexpense.AddOrEditExpenseFragment"
    tools:showIn="@layout/activity_add_expense">


    <TextView
        android:id="@+id/expense_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description:"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edit_expense_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/expense_desc"
        app:layout_constraintLeft_toRightOf="@+id/expense_desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expense_desc" />

    <TextView
        android:id="@+id/expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Amount:"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/expense_desc" />

    <EditText
        android:id="@+id/edit_expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/expense_amount"
        android:layout_marginLeft="29dp"
        app:layout_constraintTop_toTopOf="@+id/expense_amount"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/expense_amount"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.558"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/save_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="Save Expense"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_expense_amount" />
</android.support.constraint.ConstraintLayout>
